Moved text on first page up to prevent the app store button from getting cut of on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -81,7 +81,7 @@ section.page1 * {
 
 #claim {
 
-    margin-top: 19%;
+    margin-top: 10%;
 
     position: relative;
 
